--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=22.21.0 <23"
+  },
+  "packageManager": "yarn@1.22.19",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
